# papyro

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  README.zh-CN.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/desktop/: Cargo.toml
apps/desktop/assets/: editor.js  main.css
apps/desktop/assets/styles/: markdown.css  modal.css  tiptap-chrome-base.css  tiptap-chrome-command.css  tiptap-chrome-papyro.css  tiptap-chrome-table.css  tiptap-chrome.css
apps/desktop/src/: main.rs
apps/mobile/: Cargo.toml  build.rs
assets/: editor.js  main.css  tailwind.css
assets/styles/: markdown.css  modal.css  tiptap-chrome-base.css  tiptap-chrome-block.css  tiptap-chrome-command.css  tiptap-chrome-table.css  tiptap-chrome.css
crates/app/: Cargo.toml
crates/app/src/: actions.rs  assets.rs  desktop.rs  desktop_tool_windows.rs  dispatcher.rs  effects.rs  export.rs  lib.rs  mobile.rs  open_requests.rs  perf.rs  process_settings.rs  runtime.rs  settings_persistence.rs  state.rs  status_messages.rs  workspace_flow.rs
crates/app/src/handlers/: file_ops.rs  mod.rs  notes.rs  recovery.rs  search.rs  tags.rs  workspace.rs
crates/app/src/workspace_flow/: create.rs  delete.rs  move_path.rs  open.rs  recovery.rs  reload.rs  rename.rs  save.rs  support.rs  tests.rs  utils.rs
crates/app/src/workspace_flow/tests/: create.rs  open_save.rs  recovery.rs  reload.rs  rename_delete.rs
crates/core/: Cargo.toml
crates/editor/: Cargo.toml
crates/platform/: Cargo.toml
crates/platform/src/: app_data.rs  desktop.rs  dialog.rs  external.rs  lib.rs  mobile.rs  reveal.rs  traits.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  recovery.rs  settings_tests.rs
crates/storage/src/db/: mod.rs  notes.rs  recent.rs  recovery.rs  schema.rs  settings.rs  tags.rs  workspaces.rs
crates/storage/src/db/migrations/: V1__init.sql  V2__recovery_drafts.sql
crates/storage/src/fs/: file_ops.rs  front_matter.rs  mod.rs  watcher.rs  workspace.rs
crates/storage/src/index/: mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: action_labels.rs  chrome.rs  commands.rs  context.rs  i18n.rs  lib.rs  perf.rs  view_model.rs
crates/ui/src/components/: command_palette.rs  mod.rs  primitives.rs  quick_open.rs  recovery.rs  search.rs  status_bar.rs  trash.rs
crates/ui/src/components/editor/: assets.rs  autosave.rs  bridge.rs  document_cache.rs  fallback.rs  host.rs  mod.rs  outline.rs  pane.rs  preview.rs  tabbar.rs  toolbar.rs
crates/ui/src/components/header/: mod.rs
crates/ui/src/components/primitives/: buttons.rs  empty.rs  feedback.rs  forms.rs  layout.rs  navigation.rs  overlays.rs  results.rs  settings.rs  tabs.rs  tests.rs
crates/ui/src/components/settings/: mod.rs
crates/ui/src/components/sidebar/: file_tree.rs  mod.rs
crates/ui/src/layouts/: desktop_layout.rs  mobile_layout.rs  mod.rs
crates/ui/src/theme/: mod.rs
docs/: README.md  ai-skills.md  app-icons.md  architecture-beginner-guide.md  architecture.md  data-model.md  development-standards.md  directory-structure.md  editor-design.md  editor-hybrid-architecture.md  editor-protocol.md  editor-runtime-cache-policy.md  editor.md  file-association-plan.md  interaction-lag-analysis.md  known-limitations.md  markdown-editing-roadmap.md  markdown-engine-research.md  markdown-style-references.md  metadata-backup-recovery.md  module-ownership.md  performance-budget.md  product-baseline.md  refactoring-plan.md  release-packaging.md  release-qa.md  roadmap.md  runtime-state-domains.md  session-model.md  theme-system.md  tiptap-enterprise-editor-todo.md  tiptap-migration-plan.md  tiptap-official-react-strategy.md  tiptap-react-runtime-plan.md  tiptap-refactor-plan.md  tiptap-release-smoke.md  ui-architecture.md  ui-design-baseline.md  ui-design-qa.md  ui-information-architecture.md  (+6 more)
docs/zh-CN/: README.md  ai-skills.md  app-icons.md  architecture.md  development-standards.md  editor.md  (+21 more)
js/: build.js  package-lock.json  package.json  tsconfig.json
scripts/: check-desktop-resource-smoke.js  check-desktop-tiptap-webview-smoke.js  check-editor-markdown-gate.js  check-markdown-style-smoke.js  check-perf-docs.js  check-perf-smoke.js  check-tiptap-release-smoke.js  check-tiptap-runtime-smoke.js  check-ui-a11y.js  check-ui-contrast.js  check-ui-primitives.js  check-workspace-deps.js  check.ps1  check.sh  generate-app-icons.ps1  generate-perf-fixtures.js  package-desktop.ps1  report-file-lines.js  report-ui-tokens.js
(+395 files in other folders)
