[package]
name = "papyro-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
papyro-app = { path = "../../crates/app", features = ["desktop-shell"] }
papyro-platform = { path = "../../crates/platform" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
