[package]
name = "papyro-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
papyro-app = { path = "../../crates/app", features = ["desktop-shell"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
