[package]
name = "papyro-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
desktop-shell = ["dep:image", "dep:rfd", "dioxus/desktop", "papyro-ui/desktop-shell"]

[dependencies]
dioxus = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
flume = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
rfd = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
papyro-core = { path = "../core" }
papyro-ui = { path = "../ui" }
papyro-editor = { path = "../editor" }
papyro-storage = { path = "../storage" }
papyro-platform = { path = "../platform" }

[dev-dependencies]
tempfile = { workspace = true }
