[package]
name = "papyro-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
papyro-core = { path = "../core" }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
fs_extra = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
flume = { workspace = true }
