[package]
name = "papyro-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
papyro-core = { path = "../core" }
papyro-editor = { path = "../editor" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = []
desktop-shell = ["dioxus/desktop"]
